--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "multer": "^1.4.5-lts.2",
+    "slugify": "^1.6.6",
     "stripe": "^18.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
